# kitti-velodyne-viewer

./: CMakeLists.txt  README.md  binpcd  kitti.py  main.cpp  pcd2bin.py
pcdfiles/: 000000.pcd
velodyne_pcd/: 000000.pcd  000003.pcd  000004.pcd  000005.pcd
